--- a/julio.html
+++ b/julio.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Aquí iria el titulo de la pagina</h1>
     <p>Esto es un párrafo</p>
+    <p>Esto es un segundo párrafo</p>
 </body>
 </html>
