Agregando hoja de estilos

--- a/julio.html
+++ b/julio.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
+    <style href="miEstilo.css">
 <body>
     <h1>Aquí iria el titulo de la pagina</h1>
     <p>Esto es un párrafo</p>
